Added static GET /class-tree/{ontologyId} endpoint
